- Implemented classifier using SVM from sklearn - Created src/ folder for reusable functions - Created celeba_helper.py for classes to load CelebA dataset and classify - Created similarity_functions.py to experiment with different distance metrics - Created one-shot-learning.ipynb to get benchmark for dataset with only one example per person.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 
 # IntelliJ project files
 .idea
+.vscode
 
 # C extensions
 *.so
@@ -20,6 +21,7 @@ data/
 Img/
 .eggs/
 lib/
+pytorch_objects/
 lib64/
 parts/
 sdist/
