--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==1.3.0
 aiohttp==3.8.3
 aiohttp-retry==2.5.1
 aiosignal==1.2.0
@@ -11,8 +12,10 @@ atpublic==2.3
 attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
+black==22.8.0
 bleach==4.1.0
 cached-property==1.5.2
+cachetools==4.2.4
 certifi==2021.5.30
 cffi==1.15.1
 charset-normalizer==2.0.12
@@ -45,7 +48,10 @@ future==0.18.2
 gdown==4.5.1
 gitdb==4.0.9
 GitPython==3.1.18
+google-auth==2.13.0
+google-auth-oauthlib==0.4.6
 grandalf==0.6
+grpcio==1.48.2
 idna==3.4
 idna-ssl==1.1.0
 immutables==0.19
@@ -67,6 +73,7 @@ jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.1.1
 kiwisolver==1.3.1
 mailchecker==5.0.3
+Markdown==3.3.7
 MarkupSafe==2.0.1
 matplotlib==3.3.4
 mistune==0.8.4
@@ -81,24 +88,24 @@ nest-asyncio==1.5.6
 networkx==2.5.1
 notebook==6.4.10
 numpy==1.19.5
+oauthlib==3.2.2
 openpyxl==3.0.10
 packaging==21.3
 pandas==1.1.5
 pandocfilters==1.5.0
 parso==0.7.1
 pathspec==0.8.1
-pexpect==4.8.0
 phonenumbers==8.12.57
 pickleshare==0.7.5
 Pillow==8.4.0
-pip==21.2.2
 platformdirs==2.4.0
 ply==3.11
 prometheus-client==0.14.1
 prompt-toolkit==3.0.31
+protobuf==3.19.6
 psutil==5.9.3
-ptyprocess==0.7.0
 pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pydot==1.4.2
 pygit2==1.6.1
@@ -117,14 +124,15 @@ pyzmq==24.0.1
 qtconsole==5.2.2
 QtPy==2.0.1
 requests==2.27.1
+requests-oauthlib==1.3.1
 rich==12.6.0
+rsa==4.9
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 scikit-learn==0.24.2
 scipy==1.5.4
 seaborn==0.11.2
 Send2Trash==1.8.0
-setuptools==58.0.4
 shortuuid==1.0.9
 shtab==1.5.5
 six==1.16.0
@@ -132,13 +140,16 @@ sklearn==0.0
 smmap==5.0.0
 soupsieve==2.3.2.post1
 tabulate==0.8.10
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 terminado==0.12.1
 testpath==0.6.0
 text-unidecode==1.3
 threadpoolctl==3.1.0
 toml==0.10.2
 tomli==1.2.3
-torch==1.10.1
+torch==1.10.2
 torchvision==0.11.2
 tornado==6.1
 tqdm==4.64.1
@@ -149,10 +160,8 @@ urllib3==1.26.12
 voluptuous==0.13.1
 wcwidth==0.2.5
 webencodings==0.5.1
-wheel==0.37.1
+Werkzeug==2.0.3
 widgetsnbextension==3.6.1
-win-unicode-console==0.5
-wincertstore==0.2
 xlrd==2.0.1
 xmltodict==0.13.0
 yarl==1.7.2
