--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -131,6 +131,7 @@ six==1.16.0
 sklearn==0.0
 smmap==5.0.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.42
 tabulate==0.8.10
 terminado==0.12.1
 testpath==0.6.0
